added form in the page

--- a/public/style.css
+++ b/public/style.css
@@ -1537,6 +1537,22 @@ input[type="range"]:active::-webkit-slider-thumb {
   height: 100vh;
 }
 
+.h-\[550px\] {
+  height: 550px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[480px\] {
+  height: 480px;
+}
+
 .max-h-\[1000px\] {
   max-height: 1000px;
 }
